objects/DMAPP__Dealmaker_Opportunity_Field__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Use this field to add additional fields to CRUD/search screens for an opportunity. The field name must match the Salesforce field name, not the label.</description>
    <fields>
        <fullName>DMAPP__API_Field_Name__c</fullName>
        <description>Use this field to add additional fields to CRUD/search screens for an opportunity. The field name must match the Salesforce field name, not the label.</description>
        <inlineHelpText>This field name must match the Salesforce field name, not the label.</inlineHelpText>
        <label>API Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__CRUDLayout__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if you want the field to appear on the CRUD dialog.</inlineHelpText>
        <label>CRUDLayout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Order__c</fullName>
        <inlineHelpText>Enter a number here to specify where this field appears in the CRUD dialog.</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Required__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this checkbox if the field is required.</inlineHelpText>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__SearchLayout__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if you want the field to appear as a column in the search results.</inlineHelpText>
        <label>SearchLayout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Searchable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if you want to be able to search based on the value of this field.</inlineHelpText>
        <label>Searchable</label>
        <type>Checkbox</type>
    </fields>
    <label>Dealmaker Opportunity Field</label>
</CustomObject>